@@ -71,7 +71,7 @@ sub refresh {
 	my $current  = Padre::Current::_CURRENT(@_);
 	my $document = $current->document;
 
-	$self->{rename_variable}->Enable( $document->can('lexical_variable_replacement')     ? 1 : 0 );
+	$self->{rename_variable}->Enable( $document->can('rename_variable')                  ? 1 : 0 );
 	$self->{introduce_temporary}->Enable( $document->can('introduce_temporary_variable') ? 1 : 0 );
 	$self->{extract_subroutine}->Enable( $document->can('extract_subroutine')            ? 1 : 0 );
 	$self->{endify_pod}->Enable( $document->isa('Padre::Document::Perl')                 ? 1 : 0 );
